Corrected PSR-4 namespace in composer.json

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "SemanticVersion\\": ["lib/", "tests/"]
+            "Dragonrun1\\SemanticVersion\\": ["lib/", "tests/"]
         }
     }
 }
