--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Dragonrun1/SemanticVersion",
+    "name": "dragonrun1/semantic-version",
     "description": "Package to make managing Semantic Version numbers easier.",
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -25,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dragonrun1\\SemanticVersion\\": ["lib/", "tests/"]
+            "SemanticVersion\\": ["lib/", "tests/"]
         }
     }
 }
