Fixed typo in travis for coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ php:
 
 script:
     - mkdir -p build/logs
-    - phpunit --cover-clover build/logs/clover.xml
+    - phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
     - php vendor/bin/coveralls -v
