--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,1 +1,3 @@
-repo_token: 2JMr0ErkVaEoH2djRYXZ6jz9M9CmNZSgX
+src_dir: lib
+coverage_clover: build/logs/clover.xml
+json_path: build/logs/coveralls-upload.json
